...
    

    override func viewDidLoad() {
        super.viewDidLoad()
        
        
        navigationItem.title = "Types"
        
        searchBar.showsBookmarkButton = true
        searchBar.setImage(UIImage(named: "sort.png"), for: .bookmark, state: .normal)
 
        
        searchBar.enablesReturnKeyAutomatically = false
...

    
    
    @IBAction func addFolderType(_ sender: UIBarButtonItem) {
        
        
        let alertController = UIAlertController(title: "Add name?", message: "Enter the folder name", preferredStyle: .alert)
        
        
        let confirmAction = UIAlertAction(title: "Add", style: .default) { (_) in
            
            var newType: Type
            let folderType = alertController.textFields?[0].text
            
            if let tempTypeName = folderType?.trimmingCharacters(in: .whitespaces), !UtilityService.shared.isTextEmpty(tempTypeName) {
                
...
        }
        
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel) { (_) in }
        
        alertController.addTextField(configurationHandler: { (textField) in
            
            textField.placeholder = "Enter Folder Type Name"
            
        })
        
        
        alertController.addAction(confirmAction)
        alertController.addAction(cancelAction)
...
        self.present(alertController, animated: true, completion: nil)
        
    }
    
    @IBAction func deleteFolderType(_ sender: UIBarButtonItem) {

        let alertController = UIAlertController(title: "Delete this folder type?", message: "Are you sure you want to delete this folder type?", preferredStyle: .alert)
        
        let confirmAction = UIAlertAction(title: "Delete", style: .default) { (_) in
        
            let indexpaths = self.collectionView?.indexPathsForSelectedItems
        var deletedFolderTypes:[Type] = []
        
        if let indexpaths = indexpaths {
            
...
        cell.folderTypeLabel.text = folderNmaeString
        
        let numOfFolders = self.folderTypes[indexPath.item].getFolders().count
        if cell.folderTypeLabel.text == "Default"{
            cell.numOfFolders.text = "\(self.folderTypes[indexPath.item].getFolders()[0].getImageCount())"
        }else{
        cell.numOfFolders.text = numOfFolders == 0 ? "Empty" : "\(numOfFolders)" 
        }
        if edit{
            if cell.folderTypeLabel.text == "Default"{
                cell.uncheckedBoxImage.isHidden = true
                cell.isUserInteractionEnabled = false
            }else{
...
