...
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dFD-LR-nk6">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                        <subviews>
                                            <button opaque="NO" alpha="0.55000000000000004" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kMO-KZ-ncm">
                                                <rect key="frame" x="154" y="3" width="66" height="45"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <state key="normal" title="Button" image="icon-camera-512"/>
                                                <connections>
                                                    <action selector="addPhoto:" destination="Oz0-bA-lEq" eventType="touchUpInside" id="dnP-XS-oLV"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
...
